split into multiple files

--- a/rect-test.html
+++ b/rect-test.html
@@ -23,7 +23,8 @@
 
   <canvas></canvas>
 
-<script src="scripts.js"></script>
+<script src="rect.js"></script>
+<script src="rect-test.js"></script>
 
 </body>
 </html>
