add packery script

--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,8 @@
   <div id="qunit"></div>
 
 <script src="../js/rect.js"></script>
+<script src="../js/packer.js"></script>
+<script src="../js/packery.js"></script>
 
 <script src="test-rect.js"></script>
 
