--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 .item.w4 { width:  194px; }
 .item.h4 { height: 194px; }
 
+#ex4 {
+  width: 50%;
+}
+
 </style>
 
 </head>
@@ -64,6 +68,32 @@
   <div id="ex3" class="container">
   </div>
 
+  <div id="ex4" class="container">
+    <div class="item w4"></div>
+    <div class="item h4"></div>
+    <div class="item w2"></div>
+    <div class="item h4"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item h2"></div>
+    <div class="item w4"></div>
+    <div class="item w2"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item w2 h2"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item h4"></div>
+    <div class="item"></div>
+    <div class="item w4"></div>
+    <div class="item"></div>
+    <div class="item w2"></div>
+    <div class="item"></div>
+    <div class="item h2"></div>
+    <div class="item"></div>
+    <div class="item h2"></div>
+  </div>
+
 <script src="components/get-size/get-size.js"></script>
 <script src="js/rect.js"></script>
 <script src="js/packer.js"></script>
@@ -100,6 +130,9 @@ window.onload = function() {
     columnWidth: 50,
     rowHeight: 50
   });
+
+  var ex4 = document.getElementById('ex4');
+  var packery4 = new Packery( ex4 );
 
 };
 </script>
