media query for percentage based width

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
 #ex5 .item.w2 { width: 17.9%; }
 #ex5 .item.w4 { width: 37.9%; }
 
+@media ( max-width: 800px ) {
+  body { background: red ;}
+
+  #ex5 .item    { width: 17.9%; }
+  #ex5 .item.w2 { width: 37.9%; }
+  #ex5 .item.w4 { width: 57.9%; }
+
+}
+
 </style>
 
 </head>
