--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
 <script src="components/get-size/get-size.js"></script>
 <script src="js/rect.js"></script>
 <script src="js/packer.js"></script>
+<script src="js/item.js"></script>
 <script src="js/packery.js"></script>
 <script>
 
