--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ window.onload = function() {
   var packery6 = new Packery( ex6 );
 
   var ex7 = document.getElementById('ex7');
-  var packery7 = new Packery( ex7 );
+  var packery7 = window.packery7 = new Packery( ex7 );
 
   var add7Button = document.getElementById('add-to-7');
 
