rename: placedElements, spacePlaceElements

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ window.onload = function() {
   appendRandomSizedItems( ex6 );
   var packery6 = new Packery( ex6, {
     itemSelector: '.item',
-    savedElements: ex6.querySelectorAll('.bogey')
+    placedElements: ex6.querySelectorAll('.bogey')
   });
 
   var ex7 = document.getElementById('ex7');
