add elementDragStart, elementDragMove, and elementDragStop methods

--- a/draggable.html
+++ b/draggable.html
@@ -112,41 +112,15 @@ function bindDraggies( packery ) {
   var draggies = [];
   var item, draggie;
 
-  function onItemStart( event, pointer, instance ) {
-    packery.ignore( instance.element );
-    if ( packery.options.columnWidth || packery.options.rowHeight ) {
-      instance._clone = instance.element.cloneNode( true );
-      var size = getSize( instance.element );
-      instance._cloneWidth = size.outerWidth;
-      instance._cloneHeight = size.outerHeight;
-      // instance._clone.style.visibility = 'hidden';
-      instance._clone.style.background = 'orange';
-      instance._clone.style.opacity = 0.5;
-      instance.element.parentNode.appendChild( instance._clone );
-      packery.place( instance._clone );
-    } else {
-      packery.place( instance.element );
-    }
-
-
+  function onDragStart( event, pointer, instance ) {
+    packery.elementDragStart( instance.element )
   }
 
-  function onItemDrag( event, pointer, instance ) {
-    var options = packery.options;
-    var size = packery.elementSize;
-    if ( options.columnWidth || options.rowHeight ) {
-      // position clone in grid
-      var x = instance.position.x - size.paddingLeft;
-      var y = instance.position.y - size.paddingTop;
-      x = Math.round( x / options.columnWidth ) * options.columnWidth + size.paddingLeft;
-      y = Math.round( y / options.rowHeight ) * options.rowHeight + size.paddingTop;
-      instance._clone.style.left = x + 'px';
-      instance._clone.style.top  = y + 'px';
-    }
+  function onDragMove( event, pointer, instance ) {
 
     // debounce
     function delayed() {
-      packery._init();
+      packery.elementDragMove( instance.element );
       delete instance._dragTimeout;
     }
 
@@ -157,38 +131,16 @@ function bindDraggies( packery ) {
     instance._dragTimeout = setTimeout( delayed, 100 );
   }
 
-  function onItemStop( event, pointer, instance ) {
-    var elem = instance.element;
-
-    if ( packery.options.columnWidth || packery.options.rowHeight ) {
-      var item = packery.getItemFromElement( instance.element );
-      var x = parseInt( instance._clone.style.left, 10 ) - packery.elementSize.paddingLeft;
-      var y = parseInt( instance._clone.style.top,  10 ) - packery.elementSize.paddingTop;
-      item.transitionPosition( x, y );
-    }
-
-    packery._init();
-
-    if ( instance._clone ) {
-      instance._clone.parentNode.removeChild( instance._clone );
-    }
-
-    setTimeout( function() {
-      packery.unignore( elem );
-      packery.unplace( elem );
-      if ( instance.position.x !== instance.startPosition.x || instance.position.y !== instance.startPosition.y ) {
-        packery.sortItemsByPosition();
-      }
-    }, 1000 );
+  function onDragStop( event, pointer, instance ) {
+    packery.elementDragStop( instance.element );
   }
-
 
   for ( var i=0, len = packery.items.length; i < len; i++ ) {
     item = packery.items[i].element;
     draggie = new Draggabilly( item );
-    draggie.on( 'start', onItemStart );
-    draggie.on( 'drag', onItemDrag );
-    draggie.on( 'stop', onItemStop );
+    draggie.on( 'start', onDragStart );
+    draggie.on( 'drag', onDragMove );
+    draggie.on( 'stop', onDragStop );
     draggies.push( draggie );
   }
 
