--- a/index.html
+++ b/index.html
@@ -176,11 +176,15 @@
   <p><button id="add-to-7">Add items</button></p>
 
   <div id="ex7" class="container">
-    <div class="item w4"></div>
+    <div class="item w2"></div>
     <div class="item h4"></div>
     <div class="item w2"></div>
     <div class="item h4"></div>
     <div class="item"></div>
+    <div class="item h2"></div>
+    <div class="item w4"></div>
+    <div class="item w4"></div>
+    <div class="item w4"></div>
   </div>
 
 <script src="components/get-size/get-size.js"></script>
