add layout event for item, looking to do callbacks

--- a/draggable.html
+++ b/draggable.html
@@ -144,15 +144,15 @@ window.onload = function() {
     rowHeight: 50
   });
 
-  var ex6 = document.getElementById('ex6');
-  appendRandomSizedItems( ex6 );
-  var packery6 = new Packery( ex6, {
-    itemSelector: '.item'
-  });
+  // var ex6 = document.getElementById('ex6');
+  // appendRandomSizedItems( ex6 );
+  // var packery6 = new Packery( ex6, {
+  //   itemSelector: '.item'
+  // });
 
 
   bindDraggies( packery4 );
-  bindDraggies( packery6 );
+  // bindDraggies( packery6 );
 
 };
 </script>
