--- a/draggable.html
+++ b/draggable.html
@@ -119,24 +119,24 @@ function bindDraggies( packery ) {
   var draggies = [];
   var item, draggie;
 
-  function onDragStart( event, pointer, instance ) {
-    packery.itemDragStart( instance.element )
-  }
-
-  function onDragMove( event, pointer, instance ) {
-    packery.itemDragMove( instance.element, instance.position.x, instance.position.y );
-  }
-
-  function onDragStop( event, pointer, instance ) {
-    packery.itemDragStop( instance.element );
-  }
+  // function onDragStart( event, pointer, instance ) {
+  //   packery.itemDragStart( instance.element )
+  // }
+  // 
+  // function onDragMove( event, pointer, instance ) {
+  //   packery.itemDragMove( instance.element, instance.position.x, instance.position.y );
+  // }
+  // 
+  // function onDragStop( event, pointer, instance ) {
+  //   packery.itemDragStop( instance.element );
+  // }
 
   for ( var i=0, len = packery.items.length; i < len; i++ ) {
     item = packery.items[i].element;
     draggie = new Draggabilly( item );
-    draggie.on( 'start', onDragStart );
-    draggie.on( 'drag', onDragMove );
-    draggie.on( 'stop', onDragStop );
+    draggie.on( 'start', packery.handleDraggabilly.start );
+    draggie.on( 'drag', packery.handleDraggabilly.drag );
+    draggie.on( 'stop', packery.handleDraggabilly.stop );
     draggies.push( draggie );
   }
 
@@ -149,7 +149,7 @@ window.onload = function() {
   var packery4 = new Packery( ex4, {
     columnWidth: 50,
     rowHeight: 50,
-    transitionDuration: '0.8s'
+    transitionDuration: '0.6s'
   });
 
   packery4.on( 'layoutComplete', function( packery ) {
