--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
 <script src="components/get-size/get-size.js"></script>
 <script src="components/matches-selector-helper/matches-selector.js"></script>
 <script src="components/get-style-property/get-style-property.js"></script>
+<script src="components/eventEmitter/EventEmitter.js"></script>
 <script src="js/rect.js"></script>
 <script src="js/packer.js"></script>
 <script src="js/item.js"></script>
