--- a/draggabilly.html
+++ b/draggabilly.html
@@ -91,6 +91,7 @@
 <script src="components/get-style-property/get-style-property.js"></script>
 <script src="components/get-size/get-size.js"></script>
 <script src="components/matches-selector-helper/matches-selector.js"></script>
+<script src="components/eventie/eventie.js"></script>
 <script src="components/classie/classie.js"></script>
 <script src="components/eventEmitter/EventEmitter.js"></script>
 <script src="components/draggabilly/draggabilly.js"></script>
