rename some components

--- a/draggable.html
+++ b/draggable.html
@@ -89,13 +89,13 @@
 
   <div id="ex6" class="container"></div>
 
-<script src="components/get-size/get-size.js"></script>
-<script src="components/matches-selector-helper/matches-selector.js"></script>
 <script src="components/get-style-property/get-style-property.js"></script>
+<script src="components/get-size/get-size.js"></script>
+<script src="components/matches-selector/matches-selector.js"></script>
 <script src="components/classie/classie.js"></script>
 <script src="components/eventEmitter/EventEmitter.js"></script>
 <script src="http://code.jquery.com/jquery-1.9.0.min.js"></script>
-<script src="components/jquery-ui-1.10.0.custom/js/jquery-ui-1.10.0.custom.min.js"></script>
+<script src="jquery-ui-1.10.0.custom/js/jquery-ui-1.10.0.custom.min.js"></script>
 <script src="js/rect.js"></script>
 <script src="js/packer.js"></script>
 <script src="js/item.js"></script>
