--- a/draggabilly.html
+++ b/draggabilly.html
@@ -136,7 +136,7 @@ window.onload = function() {
   var packery4 = new Packery( ex4, {
     columnWidth: 50,
     rowHeight: 50,
-    transitionDuration: '0.6s'
+    transitionDuration: '1.6s'
   });
 
   packery4.on( 'layoutComplete', function( packery ) {
@@ -146,7 +146,8 @@ window.onload = function() {
   var ex6 = document.getElementById('ex6');
   appendRandomSizedItems( ex6 );
   var packery6 = new Packery( ex6, {
-    itemSelector: '.item'
+    itemSelector: '.item',
+    transitionDuration: '1.6s'
   });
 
 
