--- a/test/index.html
+++ b/test/index.html
@@ -54,11 +54,14 @@
     <div><div class="item"></div></div>
   </div>
 
-
+<script src="../components/get-style-property/get-style-property.js"></script>
+<script src="../components/get-size/get-size.js"></script>
+<script src="../components/matches-selector/matches-selector.js"></script>
+<script src="../components/eventEmitter/EventEmitter.js"></script>
+<script src="../components/eventie/eventie.js"></script>
 <script src="../js/rect.js"></script>
 <script src="../js/packer.js"></script>
-<script src="../components/get-size/get-size.js"></script>
-<script src="../components/matches-selector-helper/matches-selector.js"></script>
+<script src="../js/item.js"></script>
 <script src="../js/packery.js"></script>
 
 
