add packer tests

--- a/test/index.html
+++ b/test/index.html
@@ -66,6 +66,7 @@
 
 
 <script src="test-rect.js"></script>
+<script src="test-packer.js"></script>
 <script src="test-packery.js"></script>
 
 </body>
