--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
 
   <style>
     .container {
-      width: 500px;
+      width: 200px;
       margin-bottom: 20px;
       background: #EEE;
     }
@@ -36,6 +36,8 @@
   <h1>Packery tests</h1>
 
   <div id="qunit"></div>
+
+  <div id="empty" class="container"></div>
 
   <div id="ex1" class="container">
     <div class="item w2"></div>
