add packery removeComplete event, item remove event

--- a/test/index.html
+++ b/test/index.html
@@ -9,7 +9,7 @@
 
   <style>
     .container {
-      width: 200px;
+      width: 80px;
       margin-bottom: 20px;
       background: #EEE;
     }
@@ -54,6 +54,13 @@
     <div><div class="item h2"></div></div>
     <div><div class="item w2"></div></div>
     <div><div class="item"></div></div>
+  </div>
+
+  <div id="add-remove" class="container">
+    <div class="item w2"></div>
+    <div class="item h2"></div>
+    <div class="item w2"></div>
+    <div class="item"></div>
   </div>
 
 <script src="../components/get-style-property/get-style-property.js"></script>
