columnWidth/rowHeight tests

--- a/test/index.html
+++ b/test/index.html
@@ -26,6 +26,10 @@
     .item.h2 { height: 38px; }
     .item.w4 { width:  78px; }
     .item.h4 { height: 78px; }
+
+    #gridded {
+      width: 154px;
+    }
   </style>
 
   <script src="qunit.js"></script>
@@ -54,6 +58,9 @@
     <div><div class="item h2"></div></div>
     <div><div class="item w2"></div></div>
     <div><div class="item"></div></div>
+  </div>
+
+  <div id="gridded" class="container">
   </div>
 
   <div id="add-remove" class="container">
