--- a/test/index.html
+++ b/test/index.html
@@ -30,6 +30,29 @@
     #gridded {
       width: 154px;
     }
+
+    .stamp {
+      position: absolute;
+      background: red;
+    }
+
+    #placed1 {
+      position: relative;
+    }
+
+    #placed1 .stamp1 {
+      width: 30px;
+      height: 25px;
+      left: 22px;
+      top: 10px;
+    }
+
+    #placed1 .stamp2 {
+      width: 10px;
+      height: 45px;
+      left: 3px;
+      top: 30px;
+    }
   </style>
 
   <script src="qunit.js"></script>
@@ -67,6 +90,17 @@
     <div class="item w2"></div>
     <div class="item h2"></div>
     <div class="item w2"></div>
+    <div class="item"></div>
+  </div>
+
+  <div id="placed1" class="container">
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="stamp stamp1"></div>
+    <div class="item"></div>
+    <div class="item"></div>
+    <div class="stamp stamp2"></div>
     <div class="item"></div>
   </div>
 
