addItems test; transport Packery.Item

--- a/test/index.html
+++ b/test/index.html
@@ -131,6 +131,11 @@
     <div class="item"></div>
   </div>
 
+  <div id="adding" class="container">
+    <div class="item"></div>
+    <div class="item"></div>
+  </div>
+
 <script src="../components/get-style-property/get-style-property.js"></script>
 <script src="../components/get-size/get-size.js"></script>
 <script src="../components/matches-selector/matches-selector.js"></script>
