use outerWidth/Height in Item.positionDragRect

--- a/draggabilly.html
+++ b/draggabilly.html
@@ -152,6 +152,8 @@ window.onload = function() {
     transitionDuration: '1.6s'
   });
 
+  window.packery4 = packery4;
+
 
   bindDraggies( packery4 );
   bindDraggies( packery6 );
