--- a/draggabilly.html
+++ b/draggabilly.html
@@ -127,6 +127,10 @@ function bindDraggies( packery ) {
     draggies.push( draggie );
   }
 
+  packery.on( 'dragItemPositioned', function( pckry, item ) {
+    console.log( 'drag item positioned', item.position.x, item.position.y );
+  });
+
 }
 
 
