add test for element columnWidth/rowHeight

--- a/test/index.html
+++ b/test/index.html
@@ -32,8 +32,9 @@
     .item.w4 { width:  78px; }
     .item.h4 { height: 78px; }
 
-    #gridded {
-      width: 154px;
+    #gridded .grid-sizer {
+      width: 30px;
+      height: 25px;
     }
 
     .stamp {
@@ -108,6 +109,7 @@
   </div>
 
   <div id="gridded" class="container">
+    <div class="grid-sizer"></div>
   </div>
 
   <div id="add-remove" class="container">
