--- a/test/index.html
+++ b/test/index.html
@@ -6,79 +6,7 @@
   <title>Packery tests</title>
 
   <link rel="stylesheet" href="qunit.css" />
-
-  <style>
-    .container {
-      width: 80px;
-      margin-bottom: 20px;
-      background: #EEE;
-    }
-
-    .container:after {
-      content: '';
-      display: table;
-    }
-
-    .item {
-      float: left;
-      width:  18px;
-      height: 18px;
-      margin: 1px;
-      background: #444;
-    }
-
-    .item.w2 { width:  38px; }
-    .item.h2 { height: 38px; }
-    .item.w4 { width:  78px; }
-    .item.h4 { height: 78px; }
-
-    #gridded .grid-sizer {
-      width: 30px;
-      height: 25px;
-    }
-
-    .stamp {
-      background: red;
-    }
-
-    .has-placed {
-      position: relative;
-    }
-
-    #placed1 .stamp {
-      position: absolute;
-    }
-
-    #placed1 .stamp1 {
-      width: 30px;
-      height: 25px;
-      left: 22px;
-      top: 10px;
-    }
-
-    #placed1 .stamp2 {
-      width: 10px;
-      height: 45px;
-      left: 3px;
-      top: 30px;
-    }
-
-    #placed2 .stamp1 {
-      position: relative;
-      left: 8px;
-      top: 8px;
-    }
-
-    #placed2 .stamp2 {
-      position: absolute;
-      right: 8px;
-      top: 23px;
-    }
-
-    .dragger {
-      background: green;
-    }
-  </style>
+  <link rel="stylesheet" href="test.css" />
 
   <script src="qunit.js"></script>
 
