use qunit from components

--- a/test/index.html
+++ b/test/index.html
@@ -5,10 +5,10 @@
 
   <title>Packery tests</title>
 
-  <link rel="stylesheet" href="qunit.css" />
+  <link rel="stylesheet" href="../components/qunit/qunit.css" />
   <link rel="stylesheet" href="test.css" />
 
-  <script src="qunit.js"></script>
+  <script src="../components/qunit/qunit.js"></script>
 
 </head>
 <body>
